--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,7 @@
 
 @mixin botao {
     cursor: pointer;
-    opacity: .9;
+    opacity: .8;
     transition: opacity .2s ease;
     &:hover {
         opacity: 1;
@@ -15,17 +15,19 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 5vw;
+    gap: 20px;
+    padding: 1rem 3vw;
     font-family: 'Rubik Bubbles', sans-serif;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
+    z-index: +1;
     
     nav {
         display: flex;
-        max-width: 30rem;
         width: 100%;
+        max-width: 30rem;
     }
     ul {
         display: flex;
@@ -38,17 +40,42 @@ header {
             align-items: center;
             justify-content: center;
             font-size: 1.25rem;
-            padding: 1rem;
+            padding: 1rem 2vw;
             letter-spacing: 1px;
             
             @include botao;
         }
     }
 }
+
+
 header section {
     @include botao;
     min-width: 18rem;
     padding: .25rem .75rem;
     border: 1px solid ;
     text-align: center;
+}
+
+@media (max-width: 700px) {
+    header section, h1 {
+        font-size: 1.7rem;
+        min-width: 0;
+        margin: auto;
+    }
+    header nav {
+        position: absolute;
+        max-width: none;
+        left: 0;
+        right: 0;
+        bottom: -3.2rem;
+        background-color: variaveis.$bkgrd-clr-secondary;
+
+        ul { 
+            justify-content: space-around;
+            li {
+            font-size: 1rem;
+            }
+        }
+    }
 }
