--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -2,6 +2,7 @@
 
 .home {
     display: flex;
+    width: 100%;
     font-family: 'Rubik Bubbles', sans-serif;
     color: variaveis.$txt-clr;
     letter-spacing: 2px;
@@ -34,10 +35,11 @@
             position: relative;
             width: 300px;
             height: 300px;
+            border-bottom: 2px solid variaveis.$bkgrd-clr-secondary;
         }
     }
 }
-.home figure:nth-child(3) img::after {
+.home a:nth-child(3) img::after {
     content: 'Em breve';
     position: absolute;
     background-color: variaveis.$bkgrd-clr-secondary;
@@ -65,9 +67,6 @@
     }
 }
 @media (max-width: 700px) {
-    main {
-        padding-top: 2.5rem;
-    }
     .home article figure {
         padding-bottom: 1rem;
         font-size: 1.25rem;
