--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -59,7 +59,7 @@ header section {
 
 @media (max-width: 700px) {
     header section, h1 {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
         min-width: 0;
         margin: auto;
     }
@@ -68,13 +68,13 @@ header section {
         max-width: none;
         left: 0;
         right: 0;
-        bottom: -3.2rem;
+        bottom: -3rem;
         background-color: variaveis.$bkgrd-clr-secondary;
 
         ul { 
             justify-content: space-around;
             li {
-            font-size: 1rem;
+            font-size: .9rem;
             }
         }
     }
