correção de layout

--- a/src/pages/jogoDaVelha/jogoDaVelhaStyle.scss
+++ b/src/pages/jogoDaVelha/jogoDaVelhaStyle.scss
@@ -59,7 +59,7 @@ main {
   font-size: 3.5rem;
   font-weight: normal;
 }
-input {
+.jogoDaVelhaPlacar input {
   background-color: transparent;
   width: 100%;
   text-transform: uppercase;
