--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -16,7 +16,8 @@ header {
     align-items: center;
     justify-content: space-between;
     gap: 20px;
-    padding: 1rem 3vw;
+    padding: 0 3vw;
+    height: 15vh;
     font-family: 'Rubik Bubbles', sans-serif;
     position: sticky;
     top: 0;
@@ -53,7 +54,7 @@ header section {
     @include botao;
     min-width: 18rem;
     padding: .25rem .75rem;
-    border: 1px solid ;
+    border: 1px solid;
     text-align: center;
 }
 
