--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,6 +18,9 @@ h2 {
     font-size: 2rem;
     font-weight: normal;
 }
+h3, h5 {
+    font-weight: normal;
+}
 a {
     text-decoration: none;
     color: currentColor;
